Small changes in App.java + Consts.java + TestCase.java, creating AppTwoScenarioTest.java + rename AppTest.java to AppOneScenarioTest.java + moving to scenario folder scenariotest